<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FaelApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_card">NewCardActivity</string>
    <string name="new_card_account">Card account</string>
    <string name="new_card_holder">card holder</string>
    <string name="new_card_CRC">Card CRC number</string>
    <string name="new_card_submit">Add new card</string>
    <string name="title_activity_card_details">CardDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="coupons_pointbalance">300/500 points</string>
    <string name="coupons_available">AVAILABLE</string>
    <string name="coupons_owned">MY COUPONS</string>
	<string name="cancel_payment">Cancel payment</string>
	<string name="payment_cancel_clicked">Payment canceled</string>
</resources>