<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewCardActivity" >

    <EditText 
        android:id="@+id/edit_new_card_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/new_card_account" />
    
    <EditText 
        android:id="@+id/edit_new_card_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/edit_new_card_account"
        android:hint="@string/new_card_holder" />
    
    <EditText 
        android:id="@+id/edit_new_card_CRC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:layout_below="@id/edit_new_card_holder"
        android:hint="@string/new_card_CRC" />
    
    <Spinner 
        android:id="@+id/spinner_new_card_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_new_card_CRC"
        />
    
    <Button 
        android:id="@+id/btn_new_card_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_new_card_type"
        android:layout_centerHorizontal="true"
        android:text="@string/new_card_submit"
        android:onClick="addNewCard" />

</RelativeLayout>